--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,8 +1,7 @@
 2002-08-06  Jakub Jelinek  <jakub@redhat.com>
 
-	* config/i386/i386.c (x86_field_alignment): Don't check
-	TARGET_ALIGN_DOUBLE for the second time.
-	Apply min for all MODE_INT and MODE_CLASS_INT modes.
+	* config/i386/i386.c (x86_field_alignment): Apply min for all MODE_INT
+	and MODE_CLASS_INT modes.
 
 2002-08-06  Jakub Jelinek  <jakub@redhat.com>
 
