--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-08-06  Jakub Jelinek  <jakub@redhat.com>
 
+	* config/i386/mmintrin.h (__m64): Make the type 64-bit aligned.
+
+2002-08-06  Jakub Jelinek  <jakub@redhat.com>
+
 	* config.gcc (*-*-linux*): Default to --enable-threads=posix if no
 	--{enable,disable}-threads is given to configure.
 	(alpha*-*-linux*, hppa*-*-linux*, i[34567]86-*-linux*,
