--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-06  Neil Booth  <neil@daikokuya.co.uk>
+
+	* gcc.dg/cpp/vararg3.c, gcc.dg/cpp/vararg4.c: New tests.
+
 2002-08-06  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/abi/bitfield3.C: New test.
