--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-08-06  Neil Booth  <neil@daikokuya.co.uk>
 
+	* function.c (TRAMPOLINE_ALIGNMENT): Always defined.
+
+2002-08-06  Neil Booth  <neil@daikokuya.co.uk>
+
 	* cppinit.c (struct lang_flags): Rename trigraphs std.
 	(set_lang): Update.
 	* cpplib.h (struct cpp_options): New member std.
