Mark __func__ with line number 0, to avoid confusing debuggers.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56081 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-06  Dale Johannesen  <dalej@apple.com>
+	* c-common.c (fname_decl): Use line number 0 for
+        __func__, to avoid confusing debuggers.
+
 2002-08-06  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* gcov.c: Tidy.
