--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-06  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* typeck.c (build_x_unary_op): Handle pointer-to-member.
+
 2002-08-05  Geoffrey Keating  <geoffk@redhat.com>
 
 	* class.c: Don't include obstack.h.
