--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-07  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* g++.dg/README (Subdirectories): Document new subdir expr.
+	* g++.dg/expr/pmf-1.C: New test.
+
 2002-08-06  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/vararg3.c, gcc.dg/cpp/vararg4.c: New tests.
