--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-06  Jason Merrill  <jason@redhat.com>
+
+	* c-common.c (c_expand_expr) [STMT_EXPR]: If the last expression is
+	a VAR_DECL with RTL that matches the target, just return that RTL.
+
 2002-08-06  Dale Johannesen  <dalej@apple.com>
 	* c-common.c (fname_decl): Use line number 0 for
         __func__, to avoid confusing debuggers.
