* c-decl.c (duplicate_decls): Error out for incompatible TLS         declarations.
        * testsuite/gcc.dg/tls/diag-3.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56084 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-06  Aldy Hernandez  <aldyh@redhat.com>
+
+        * testsuite/gcc.dg/tls/diag-3.c: New.
+
 2002-08-07  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* g++.dg/README (Subdirectories): Document new subdir expr.
