--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-06  Aldy Hernandez  <aldyh@redhat.com>
+
+        * c-decl.c (duplicate_decls): Error out for incompatible TLS
+        declarations.
+
+        * testsuite/gcc.dg/tls/diag-3.c: New.
+
 2002-08-06  Jason Merrill  <jason@redhat.com>
 
 	* c-common.c (c_expand_expr) [STMT_EXPR]: If the last expression is
