--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-06  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (dummy-conditions.o): Depend on $(HCONFIG_H) not
+	$(GCONFIG_H).
+
 2002-08-06  Aldy Hernandez  <aldyh@redhat.com>
 
         * c-decl.c (duplicate_decls): Error out for incompatible TLS
