--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-08-06  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
+	* ip2k.c (ip2k_set_compare): Add missing iteration variable.
+
 	* Makefile.in (dummy-conditions.o): Depend on $(HCONFIG_H) not
 	$(GCONFIG_H).
 
