--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-07  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/lang/ClassLoader.java (getSystemClassLoader, findClass,
+	defineClass, setSigners, getSystemResource, getSystemResourceAsStream, 
+	findResource, getResources, findResources): Add javadoc from classpath.
+	(getSystemResources): Implemented.
+
 2002-08-01  Mark Wielaard  <mark@klomp.org>
 
 	Revert patch that breaks libgcj shared library on powerpc:
