* config/sh/lib1funcs.asm (GCC_shcompact_incoming_args): Don't 	overwrite callee-save registers.  Fix comment.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56101 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-07  Stephen Clarke <stephen.clarke@superh.com>
+
+	* config/sh/lib1funcs.asm (GCC_shcompact_incoming_args): Don't
+	overwrite callee-save registers.  Fix comment.
+
 2002-08-06  Chris Demetriou  <cgd@broadcom.com>
 
 	* config/mips/mips.c (override_options): Set MASK_BRANCHLIKELY
