--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-07  Chris Demetriou  <cgd@broadcom.com>
+
+	* config/mips/mips.md (sunlt_sf, suneq_sf, sunle_sf): Remove
+	dependency on TARGET_DOUBLE_FLOAT.
+
 2002-08-07  Stephen Clarke <stephen.clarke@superh.com>
 
 	* config/sh/lib1funcs.asm (GCC_shcompact_incoming_args): Don't
