--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-07  Jakub Jelinek  <jakub@redhat.com>
+	    Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/i386-bitfield1.c: New test.
+	* g++.dg/abi/bitfield3.C: New test.
+
 2002-08-01  Benjamin Kosnik   <bkoz@redhat.com>
 
 	* g++.old-deja/g++.abi/ptrflags.C (expect): Change
