Makefile.in (c-opts.o, [...]): Update.
	* Makefile.in (c-opts.o, c-common.o, C_AND_OBJC_OBJS): Update.
	* c-common.c: Don't include tree-inline.h.
	(c_common_init_options, c_common_post_options): Move to c-opts.c.
	* c-common.h (c_common_decode_option): New.
	* c-decl.c (c_decode_option): Remove.
	* c-lang.c (LANG_HOOKS_DECODE_OPTION): Use c_common_decode_option.
	* c-opts.c: New file.
	* c-tree.h (c_decode_option): Remove.
	* doc/passes.texi: Update.
	* objc/objc-act.c (objc_decode_option): Remove.
	* objc/objc-act.h (objc_decode_option): Remove.
	* objc/ojbc-lang.c (LANG_HOOKS_DECODE_OPTION): Use
	c_common_decode_option.
cp:
	* Make-lang.in (CXX_C_OBJS): Update.
	* cp-lang.c (LANG_HOOKS_DECODE_OPTION): Use c_common_decode_option.
	* cp-tree.h (cxx_decode_option): Remove.
	* decl2.c (compare_options, lang_f_options, unsupported_options,
	cxx_decode_option): Remove.
testsuite:
	* objc.dg/const-str-2.m: Update.
	* gcc.dg/cpp/c++98.c: Change to C extension.
	* gcc.dg/cpp/c++98-pedantic.c: Similarly.
	* gcc.dg/cpp/cpp.exp: Process .C extensions too.

From-SVN: r56105

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,19 @@
+2002-08-07  Neil Booth  <neil@daikokuya.co.uk>
+
+	* Makefile.in (c-opts.o, c-common.o, C_AND_OBJC_OBJS): Update.
+	* c-common.c: Don't include tree-inline.h.
+	(c_common_init_options, c_common_post_options): Move to c-opts.c.
+	* c-common.h (c_common_decode_option): New.
+	* c-decl.c (c_decode_option): Remove.
+	* c-lang.c (LANG_HOOKS_DECODE_OPTION): Use c_common_decode_option.
+	* c-opts.c: New file.
+	* c-tree.h (c_decode_option): Remove.
+	* doc/passes.texi: Update.
+	* objc/objc-act.c (objc_decode_option): Remove.
+	* objc/objc-act.h (objc_decode_option): Remove.
+	* objc/ojbc-lang.c (LANG_HOOKS_DECODE_OPTION): Use
+	c_common_decode_option.
+
 2002-08-07  Chris Demetriou  <cgd@broadcom.com>
 
 	* config/mips/mips.md (sunlt_sf, suneq_sf, sunle_sf): Remove
