--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-07  Neil Booth  <neil@daikokuya.co.uk>
+
+	* Make-lang.in (CXX_C_OBJS): Update.
+	* cp-lang.c (LANG_HOOKS_DECODE_OPTION): Use c_common_decode_option.
+	* cp-tree.h (cxx_decode_option): Remove.
+	* decl2.c (compare_options, lang_f_options, unsupported_options,
+	cxx_decode_option): Remove.
+
 2002-08-06  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* typeck.c (build_x_unary_op): Handle pointer-to-member.
