* stor-layout.c (place_union_field): Apply ADJUST_FIELD_ALIGN 	to type_align when PCC_BITFIELD_TYPE_MATTERS.  Only apply 	ADJUST_FIELD_ALIGN if not DECL_USER_ALIGN resp. TYPE_USER_ALIGN. 	(place_field): Likewise. 	* config/i386/i386.c (x86_field_alignment): Don't check 	DECL_USER_ALIGN here. 	* config/rs6000/rs6000.c (rs6000_field_alignment): New. 	* config/rs6000/rs6000-protos.h (rs6000_field_alignment): New 	prototype. 	* config/rs6000/rs6000.h (ADJUST_FIELD_ALIGN): Define. 	* config/rs6000/aix.h (ADJUST_FIELD_ALIGN): Remove. 	* config/rs6000/darwin.h (ADJUST_FIELD_ALIGN): Remove. 	* config/rs6000/linux64.h (ADJUST_FIELD_ALIGN): Remove. 	* config/rs6000/sysv4.h (ADJUST_FIELD_ALIGN): Remove. 	* doc/tm.texi (ADJUST_FIELD_ALIGN): Update description.
	* gcc.dg/i386-bitfield1.c: New test.
	* g++.dg/abi/bitfield3.C: Update.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56107 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-07  Jakub Jelinek  <jakub@redhat.com>
+	    Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/i386-bitfield1.c: New test.
+	* g++.dg/abi/bitfield3.C: Update.
+
 2002-08-07  Neil Booth  <neil@daikokuya.co.uk>
 
 	* objc.dg/const-str-2.m: Update.
