* cppmacro.c (_cpp_builtin_macro_text): Remove unused variable.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56109 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-07  Neil Booth  <neil@daikokuya.co.uk>
+
+	* cppmacro.c (_cpp_builtin_macro_text): Remove unused variable.
+
 2002-08-07  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* configure.in (PREFIX_INCLUDE_DIR): Don't define if prefix and
