--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-07  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa.c (struct deferred_plabel): Constify name field.
+
 2002-08-07  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cppmacro.c (_cpp_builtin_macro_text): Remove unused variable.
