--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/bitfld-3.c: New test.
+
 2002-08-07  Jakub Jelinek  <jakub@redhat.com>
 	    Richard Henderson  <rth@redhat.com>
 
