--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-08  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.h (ASM_CPU_SPEC): Pass -mpower4 when cpu=power4.
+
 2002-08-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* stor-layout.c (place_union_field): For bitfields if
