--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-08-08  Adam Nemet  <anemet@lnxw.com>
+
+	* config/arm/arm.c (thumb_unexpanded_epilogue): Stack the PIC
+	register.
+	(thumb_expand_prologue): Likewise.
+	(thumb_output_function_prologue): Likewise.
+	* config/arm/arm.h (THUMB_INITIAL_ELIMINATION_OFFSET): Account for
+	the additional push of the PIC register.
+
 2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* configure.in (enable_coverage): New enable switch.
