--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2002-08-08  Jakub Jelinek  <jakub@redhat.com>
 
+	* config/rs6000/rs6000-protos.h (rs6000_field_alignment): Remove.
+	* config/rs6000/rs6000.c (rs6000_field_alignment): Move...
+	* config/rs6000/rs6000.h (ADJUST_FIELD_ALIGN): ...inline into the
+	macro.
+
+2002-08-08  Jakub Jelinek  <jakub@redhat.com>
+
 	* stor-layout.c (place_union_field): For bitfields if
 	PCC_BITFIELD_TYPE_MATTERS and TYPE_USER_ALIGN, set record's
 	TYPE_USER_ALIGN.
