* config/rs6000/rs6000-protos.h (rs6000_field_alignment): Remove. 	* config/rs6000/rs6000.c (rs6000_field_alignment): Move... 	* config/rs6000/rs6000.h (ADJUST_FIELD_ALIGN): ...inline into the 	macro.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56131 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/rs6000/rs6000-protos.h (rs6000_field_alignment): Remove.
+	* config/rs6000/rs6000.c (rs6000_field_alignment): Move...
+	* config/rs6000/rs6000.h (ADJUST_FIELD_ALIGN): ...inline into the
+	macro.
+
 2002-08-08  Adam Nemet  <anemet@lnxw.com>
 
 	* config/arm/arm.c (thumb_unexpanded_epilogue): Stack the PIC
