--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,11 @@
 2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* typeck.c (build_component_addr): Remove.
+	(build_unary_op): Just check it's not a bitfield, and then build
+	an ADDR_EXPR.
+
+2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* class.c (convert_to_base): Correct check for error_mark_node.
 	(create_vtable_ptr): Remove unused VFUNS_P parm.
 
