--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/other/packed1.C: New test.
+
 2002-08-07  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/abi/offsetof.C: Tweak error messages.
