--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-08  Mark Mitchell  <mark@codesourcery.com>
+
+	* typeck.c (build_class_member_access_expr): Do not return
+	error_mark_node when no error has occurred.
+	
 2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* typeck.c (build_component_addr): Remove.
