--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-08  Stephen Clarke <stephen.clarke@superh.com>
+
+	* config/sh/sh.c (prepare_move_operands): Only call
+	target_reg_operand if TARGET_SHMEDIA.
+	
 2002-08-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/rs6000/rs6000.h, config/rs6000/aix.h,
