--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-08  Devang Patel  <dpatel@apple.com>
+	* objc/objc-act.c (build_selector_translation_table): Issue warning, 
+	when  -Wselector is used,if method for which selector is being 
+	created does not exist.
+	
 2002-08-08  Stephen Clarke <stephen.clarke@superh.com>
 
 	* config/sh/sh.c (prepare_move_operands): Only call
