--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-08  Devang Patel  <dpatel@apple.com>
+	*objc.dg/selector-1.m : New test
+	
 2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/abi/bitfield4.c: New test.
