--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,10 @@
+2002-08-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/tls/opt-2.c: New test.
+
 2002-08-08  Devang Patel  <dpatel@apple.com>
-	*objc.dg/selector-1.m : New test
+
+	* objc.dg/selector-1.m : New test
 	
 2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
 
