--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-08  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* jcf-write.c (get_access_flags): Return correct access flags for 
+	private and protected inner classes.
+
 2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* java/Make-lang.in (java.mostlyclean): Remove coverage files.
