More AWT/Swing merge from GNU Classpath.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56151 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -411,6 +411,9 @@
 	* gnu/awt/xlib/XGraphicsConfiguration.java,
 	gnu/awt/xlib/XToolkit.java: Updated to compile against 1.4 abstract
 	API.
+	
+	* javax/swing/plaf/metal/MetalLookAndFeel.java: New file from 
+	GNU Classpath.
 
 	* Makefile.am: Add new files.
 	* Makefile.in: Rebuilt.
