--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,22 @@
+2002-08-09  Mark Wielaard  <mark@klomp.org>
+
+	* java/awt/image/MemoryImageSource.java: Change constructor to take
+	int[] not byte[].
+	* java/awt/Graphics2D.java: Uncomment methods that can now be
+	compiled.
+	* java/awt/GridBagLayout.java: New stub implementation.
+	* javax/swing/text/html/HTML.java: Stub implementation.
+	* javax/swing/text/html/parser/ParserDelegator.java: New stub
+	implementation.
+
+	* Makefile.am: Add new files.
+	* Makefile.in: Rebuilt.
+
+2002-08-09  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* gnu/awt/j2d/Graphics2DImpl.java: Implement stubs for new abstract
+	methods in Graphics2D.
+	
 2002-08-09  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	AWT/Swing merge from GNU Classpath.
