--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,19 @@
+2002-08-09  Neil Booth  <neil@daikokuya.co.uk>
+
+	* Makefile.in (c-opts.o): Update
+	* c-opts.c: Include intl.h.
+	(print_help): Move from cppinit.c.  Remove unused options.
+	(COMMAND_LINE_OPTIONS): Move more from cppinit.c.
+	(missing_arg): Complain for switches without an argument.
+	(c_common_decode_option): Reject missing joined arguments.
+	Handle new switches from cppinit.c.
+	* cppinit.c (COMMAND_LINE_OPTIONS): Move some switches to c-opts.c.
+	(cpp_handle_option): Similarly.
+	(print_help): Moved to c-opts.c.
+	* cpplib.h (struct cpp_options): Remove help_only.
+	* gcc.c (cpp_unique_options): Remove -$.
+	* doc/cppopts.texi: Undocument -h.
+
 2002-08-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.c (legitimate_constant_p): UNSPEC_TP is not
