--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* profile.c (da_file_name): New static var.
+	(init_branch_prob): Initialize it.
+	(end_branch_prob): Remove da file.
+
+	* Makefile.in (stage1_build): Pass empty COVERAGE_FLAGS.
+	* configure.in (coverage_flags) default to nothing.
+	* configure: Rebuilt.
+
 2002-08-09  Neil Booth  <neil@daikokuya.co.uk>
 
 	* Makefile.in (c-opts.o): Update
