--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-09  Dale Johannesen  <dalej@apple.com>
+	* config/rs6000/rs6000.md: Add sibcall patterns.
+	* config/rs6000/rs6000.h (FUNCTION_OK_FOR_SIBCALL):  Define.
+	* config/rs6000/rs6000.c (rs6000_ra_ever_killed):
+	Rewritten to handle sibcalls.
+	* config/rs6000/rs6000.c (function_ok_for_sibcall):  New.
+	* config/rs6000/rs6000-protos.h (function_ok_for_sibcall):  New.
+
 2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* profile.c (da_file_name): New static var.
