--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,9 @@
+2002-08-09  Toshiyasu Morita  <toshiyasu.morita@hsa.hitachi.com>
+
+	* ifcvt.c (find_if_case_2): Test correct basic block for size.
+
 2002-08-09  Dale Johannesen  <dalej@apple.com>
+
 	* config/rs6000/rs6000.md: Add sibcall patterns.
 	* config/rs6000/rs6000.h (FUNCTION_OK_FOR_SIBCALL):  Define.
 	* config/rs6000/rs6000.c (rs6000_ra_ever_killed):
