--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,19 @@
+2002-08-09  Mark Mitchell  <mark@codesourcery.com>
+
+	* call.c (standard_conversion): Use build_ptrmem_type.
+	* cp-tree.h (build_ptrmem_type): New function.
+	(adjust_result_of_qualified_name_lookup): Likewise.
+	* decl.c (grokvardecl): Do not look for OFFSET_TYPEs to indicate
+	static data members.
+	(build_ptrmem_type): New function.
+	(grokdeclarator): Do not use build_offset_type when encountering a
+	qualified name.
+	* parse.y (parse_finish_call_expr): Use
+	adjust_result_of_qualified_name_lookup.
+	* search.c (adjust_result_of_qualified_name_lookup): New function.
+	* typeck.c (qualify_type_recursive): Use TYPE_PTRMEM_* rather than
+	accessing OFFSET_TYPEs directly.
+	
 2002-08-08  Mike Stump  <mrs@apple.com>
 
 	* call.c (add_builtin_candidate): legal -> valid, illegal -> invalid.
