--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-10  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gengtype.c (write_gc_structure_fields): Avoid signed/unsigned
+	warnings in output files.
+
 2002-08-09  Ziemowit Laski  <zlaski@apple.com>
 
 	* c-common.c (flag_objc): New.
